<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="139dp"
        android:layout_height="144dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appLogo" />

    <TextView
        android:id="@+id/tv_rpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/recoverPassword"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_intruction"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/instruction"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rpassword" />

    <EditText
        android:id="@+id/ed_email"
        style="@style/EditTextRounded"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="#AFA9A9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_intruction" />

    <Button
        android:id="@+id/bt_instructions"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/rosado"
        android:text="@string/instructions"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        app:layout_constraintVertical_bias="0.175"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>