<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="204dp"
        android:layout_height="206dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appLogo" />

    <TextView
        android:id="@+id/tv_appNombre"
        android:layout_width="168dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/rosado"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="349dp"
        android:layout_height="93dp"
        android:layout_marginTop="68dp"
        android:fontFamily="serif"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appNombre" />

    <Button
        android:id="@+id/bt_comienza"
        android:layout_width="257dp"
        android:layout_height="66dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/rosado"
        android:text="@string/starts"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/rosado"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_comienza"
        app:layout_constraintVertical_bias="0.141" />

</androidx.constraintlayout.widget.ConstraintLayout>